[package]
name = "abackus"
version = "0.1.9"
edition = "2018"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "Parser builder using EBNF"
license = "MIT"
repository = "https://github.com/rodolf0/tox"

[features]
debug = []

[dependencies]
lexers = { version = "0.1.2", path = "../lexers" }
earlgrey = { version = "0.2.3", path = "../earlgrey" }

[[example]]
name = "ebnftree"
path = "examples/ebnftree.rs"

[dev-dependencies]
rustyline = "1.0.0"
