[package]
name = "abackus"
version = "0.2.2"
edition = "2018"
license = "MIT"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "Parser builder using EBNF"
repository = "https://github.com/rodolf0/tox/tree/master/abackus"
readme = "README.md"
keywords = ["parser", "earley", "cfg", "grammar", "ast"]
categories = ["parsing", "text-processing"]

[features]
debug = []

[dependencies]
lexers = { version = "0.1.2", path = "../lexers" }
earlgrey = { version = "0.3", path = "../earlgrey" }

[[example]]
name = "ebnftree"
path = "examples/ebnftree.rs"
