[package]
name = "abackus"
version = "0.2.4"
edition = "2021"
license = "MIT"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "Parser builder using EBNF"
repository = "https://github.com/rodolf0/tox/tree/master/abackus"
readme = "README.md"
keywords = ["parser", "earley", "cfg", "grammar", "ast"]
categories = ["parsing", "text-processing"]

[features]
debug = []

[dependencies]
lexers = { version = "0.1.4", path = "../lexers" }
earlgrey = { version = "0.3.1", path = "../earlgrey" }

[[example]]
name = "ebnftree"
path = "examples/ebnftree.rs"
