[package]
name = "toxearley"
version = "0.0.3"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "An earley parser"
license = "MIT"
repository = "https://github.com/rodolf0/tox"

[dependencies]
lexers = { version = "0.0.4", path = "../lexers" }

[[example]]
name = "arith"
path = "examples/arith.rs"

[[example]]
name = "time"
path = "examples/time.rs"

[dev-dependencies]
linenoise-rust = "0.2"
regex = "0.1"
