[package]
name = "earlgrey"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "A library for parsing context-free grammars using Earley algorithm"
repository = "https://github.com/rodolf0/tox/tree/master/earlgrey"
readme = "README.md"
keywords = ["parser", "earley", "cfg", "grammar", "ast"]
categories = ["parsing", "text-processing"]

[features]
debug = []

[[example]]
name = "arith"
path = "examples/arith.rs"

[dev-dependencies]
lexers = { version = "0.1", path = "../lexers" }
rustyline = "9.1"
