[package]
name = "earlgrey"
version = "0.4.1"
edition = "2024"
license = "MIT"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "A library for parsing context-free grammars using Earley algorithm"
repository = "https://github.com/rodolf0/tox/tree/master/earlgrey"
readme = "README.md"
keywords = ["parser", "earley", "grammar", "ast", "ebnf"]
categories = ["parsing", "text-processing"]

# The library crate has no dependencies. Optionals are for tools
[dev-dependencies]
lexers = { version = "0.1", path = "../lexers" }
rustyline = { version = "14.0.0" }

[features]
# Allow building with 'debug' feature to de verbose printing of internal parsing state.
debug = []
