[package]
name = "fluxcap"
version = "0.0.14"
edition = "2018"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "time expression parsing inspired on duckling"
license = "MIT"
repository = "https://github.com/rodolf0/tox"

[dependencies]
chrono = "0.4"
abackus = { version = "0.2.2", path = "../abackus" }
earlgrey = { version = "0.3", path = "../earlgrey" }
lexers = { version = "0.1.3", path = "../lexers" }
kronos = { version = "0.1.4", path = "../kronos" }
