[package]
name = "fluxcap"
version = "0.1.1"
edition = "2021"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "time expression parsing inspired on duckling"
license = "MIT"
repository = "https://github.com/rodolf0/tox"

[dependencies]
chrono = "0.4"
abackus = { version = "0.2", path = "../abackus" }
earlgrey = { version = "0.3", path = "../earlgrey" }
lexers = { version = "0.1", path = "../lexers" }
kronos = { version = "0.1", path = "../kronos" }
