[package]
name = "fluxcap"
version = "0.1.2"
edition = "2021"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "time expression parsing inspired on duckling"
license = "MIT"
repository = "https://github.com/rodolf0/tox"

[dependencies]
chrono = "0.4"
earlgrey = { version = "0.4", path = "../earlgrey" }
kronos = { version = "0.1", path = "../kronos" }
