[package]
name = "kronos"
version = "0.1.4"
edition = "2018"
license = "MIT"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "A tool to calculate complex time expressions"
repository = "https://github.com/rodolf0/tox/tree/master/kronos"
readme = "README.md"
keywords = ["time", "date", "calendar", "chrono", "sequence"]
categories = ["date-and-time"]

[dependencies]
chrono = "0.4"
