[package]
name = "lexers"
version = "0.1.2"
edition = "2018"
license = "MIT"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "Tools for tokenizing and scanning"
repository = "https://github.com/rodolf0/tox/tree/master/lexers"
readme = "README.md"
keywords = ["lexer", "tokenizer"]
categories = ["parsing"]
