[package]
name = "mallard"
version = "0.0.1"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "time expression parsing inspired on duckling"
license = "MIT"
repository = "https://github.com/rodolf0/tox"

[dependencies]
chrono = "0.2"
lexers = { version = "0.0.4", path = "../lexers" }
earlgrey = { version = "0.0.5", path = "../earlgrey" }
kronos = { version = "0.0.1", path = "../kronos" }
