[package]
name = "shunting"
version = "0.0.4"
edition = "2018"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "A shunting-yard math parser"
license = "MIT"
repository = "https://github.com/rodolf0/tox"

[features]
default = ["dynlink-eval"]
dynlink-eval = ["dylib"]

[dependencies]
dirs = "1.0"
lexers = { version = "0.1.2", path = "../lexers" }
rand = "0.6"
rustyline = "3.0.0"

[dependencies.dylib]
version = "0.0.3"
optional = true
