[package]
name = "shunting"
version = "0.0.8"
edition = "2018"
license = "MIT"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "A library for evaluating math expressions"
repository = "https://github.com/rodolf0/tox/tree/master/shunting"
readme = "README.md"
keywords = ["shunting", "math", "parser", "expression", "eval"]
categories = ["parsing", "algorithms"]

[features]
default = ["dynlink-eval"]
dynlink-eval = ["dylib"]

[dependencies]
dirs = "1.0"
lexers = { version = "0.1.3", path = "../lexers" }
rand = "0.6"
rustyline = "5.0.0"

[dependencies.dylib]
version = "0.0.3"
optional = true
