[package]
name = "shunting"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
description = "A library for evaluating math expressions"
repository = "https://github.com/rodolf0/tox/tree/master/shunting"
readme = "README.md"
keywords = ["shunting", "math", "parser", "expression", "eval"]
categories = ["parsing", "algorithms"]

[dependencies]
lexers = { version = "0.1", path = "../lexers" }
rand = "0.8"
rand_distr = "0.4"
libm = "0.2"

[dev-dependencies]
home = "0.5"
rustyline = "9.1"
